--- a/css/professor/professor.css
+++ b/css/professor/professor.css
@@ -35,6 +35,55 @@ nav {
     background-color: #074A71;
 }
 
+
+.container {
+    width: 100%;
+    height: 100%;
+    padding: 5vw 8.4vh;
+    background-color: #eeeeee;
+}
+
+.container_topo {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2vh;
+}
+
+.container_topo p {
+    color: #074A71;
+}
+
+.nome_buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.adicionar_editar_deletar a {
+    color: white;
+    background-color: #3084B4;
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.linha {
+    background-color: #3084B4;
+    width: 100%;
+    height: 2px;
+}
+
+.pre__recarga {
+    width: 100px;
+    height: 100px;
+}
+
 @media (max-width: 999px) {
     .busca {
         width: 100%;
