--- a/css/professor/professor.css
+++ b/css/professor/professor.css
@@ -92,18 +92,29 @@ form #sair:hover{
 
   .imgTarefa{
     display: flex;
+    align-items: center;
+    width: auto;
+    justify-content: center;
+    height: auto;
+    background-color: #666666;
   }
   .imgTarefa input[type="file"]:hover::before {
     background: #e0e0e0;
   }
   .imgTarefa #visualizacao {
-    width: 500px;
-    background: url(https://img.freepik.com/vetores-premium/os-arquivos-png-fundo-vector-transparente-fundo-png_302321-1276.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    content: " ";
-    height: 300px;
-    background-size: contain;
+    width: 40vw;
+    height: 40vh;
+    display: grid;
+    place-content: center;
+    background-color: #3084B4;
+  }
+
+  #imgVisu{
+    height: 40vh;
+    display: grid;
+    place-self: center;
+    width: 40vw;
+    background-color: #666666;
   }
   
   
