--- a/css/aluno/aluno.css
+++ b/css/aluno/aluno.css
@@ -113,6 +113,34 @@ nav {
     cursor: pointer;
     position: relative;
     overflow: hidden;
+    transition: .4s ease-in-out;
+}
+.card2 {
+    width: 350px;
+    height: auto;
+    background: #D9D9D9;
+    padding: 20px 0;
+    border: 1px solid #3084B4;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+    transition: .4s ease-in-out;
+}
+
+.card2:hover, .card:hover{
+    scale: .9;
+}
+
+.descricaoMateria{
+    text-align: center;
+    font-size: .9rem;
+    line-height: 20px;
 }
 
 .card img {
@@ -594,6 +622,8 @@ label {
     cursor: pointer;
 
 }
+
+
 
 @media (max-width: 999px) {
 
