--- a/css/professor/professor.css
+++ b/css/professor/professor.css
@@ -127,7 +127,7 @@ nav {
 
 .inputsTarefa {
     width: 90%;
-    margin-top: 10%;
+    margin-top: 5%;
     gap: 4vh;
 }
 
@@ -180,6 +180,7 @@ nav {
     }
 
     #sendTarefa{
+        margin-top: 0;
         width: 45%;
     }
 }
