--- a/css/professor/professor.css
+++ b/css/professor/professor.css
@@ -57,6 +57,28 @@ nav {
     background-color: #C4D9E5;
     font-size: clamp(1.3rem, -0.0469rem + 2.75vw, 1.5rem);
 }
+.modal__editar__tarefa {
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: .9;
+    position: absolute;
+    background-color: var(--primary-color);
+}
+
+.modal__editar__tarefa form {
+    height: auto;
+    width: 80%;
+    margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 4%;
+    opacity: 2;
+    z-index: 2;
+    background-color: #C4D9E5;
+    font-size: clamp(1.3rem, -0.0469rem + 2.75vw, 1.5rem);
+}
 
 #sair {
     padding: 10px 40px;
@@ -142,7 +164,7 @@ nav {
     padding: 5px;
 }
 
-#sendTarefa {
+#sendTarefa, #sendTarefaEditada {
     width: 25%;
     display: grid;
     margin-top: 5vh;
@@ -156,7 +178,7 @@ nav {
     transition: .4s ease-in-out;
 }
 
-#sendTarefa:hover {
+#sendTarefa:hover , #sendTarefaEditada:hover{
     scale: 0.9;
 }
 
@@ -182,8 +204,30 @@ nav {
     cursor: pointer;
     font-size: clamp(0.8125rem, -0.0469rem + 2.75vw, 1.5rem);
 }
+#editar2{
+    color: white;
+    background-color: #3084B4;
+    padding: 10px;
+    border-radius: 50%;
+    border: 0;
+    float: right;
+    left: 0;
+    position: absolute;
+    display: none;
+    bottom: 0;
+    cursor: pointer;
+    font-size: clamp(0.8125rem, -0.0469rem + 2.75vw, 1.5rem);
+}
 
-.card:hover #excluir2{
+.buttonCard{
+    width: auto;
+    height: auto;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    background-color: #3084B4;
+}
+
+.card:hover #excluir2, .card:hover #editar2{
     display: block;
 }
 .idTarefa{
@@ -203,7 +247,7 @@ nav {
 }
 
 @media (max-width:600px) {
-    .modal__adicionar__tarefa form {
+    .modal__adicionar__tarefa form , .modal__editar__tarefa form {
         height: 90%;
         width: 90%;
         margin-left: 5%;
@@ -211,7 +255,7 @@ nav {
         gap: 5vh;
     }
 
-    #sendTarefa{
+    #sendTarefa, #sendTarefaEditada{
         margin-top: 0;
         width: 45%;
     }
