--- a/css/professor/professor.css
+++ b/css/professor/professor.css
@@ -227,8 +227,12 @@ nav {
     width: auto;
     height: auto;
     border-radius: 5px;
+    transition: .4s ease-in-out;
     border: 1px solid transparent;
-    background-color: #3084B4;
+}
+
+.buttonCard:hover{
+    scale: 0.9;    
 }
 
 .card:hover #excluir2,
