--- a/css/adm/administrador_professor.css
+++ b/css/adm/administrador_professor.css
@@ -158,6 +158,34 @@ main {
     transform: scale(1.1);
 }
 
+.iconeApagar {
+    display: none;
+    width: 40px;
+    height: 40px;
+}
+
+.iconeEditar {
+    display: none;
+    width: 40px;
+    height: 40px;
+}
+
+.professorLista {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.professorLista:hover .iconeApagar{
+    display: block;
+    align-items: center;
+}
+
+.professorLista:hover .iconeEditar{
+    display: block;
+   
+}
+
 .containerProfessor__menuConteudo {
     height: 80%;
     width: 90%;
