--- a/css/professor/tarefas.css
+++ b/css/professor/tarefas.css
@@ -389,6 +389,32 @@
     opacity: 1;
  }
  
+ .modal_excluir{
+    display: grid;
+    place-self: center;
+    background-color: #585858;
+    position: absolute;
+    padding: 25px;
+    border: 1px solid #ffff;
+ }
+ .modal_excluir span p{
+    font-size: clamp(1rem, 0.5rem + 1.6vw, 1.4rem);
+    text-align: justify;
+    color: #ffff;
+    letter-spacing: 0px;
+ }
+ .modal_excluir span {
+   margin: 3vh 0;
+ }
+
+ .confirmacao{
+    display: flex;
+   gap: 2vw;
+ }
+ .confirmacao button{
+   padding: 10px 20px;
+   cursor: pointer;
+ }
 
 @media (max-width:650px) {
     .apresentacaoModal h3{
@@ -404,5 +430,10 @@
        flex-direction: column;
        gap: 2vh;
     }
+
+    .confirmacao button{
+        padding: 10px 30px;
+        cursor: pointer;
+      }
     
 }
