--- a/css/professor/cursos.css
+++ b/css/professor/cursos.css
@@ -12,7 +12,7 @@ body {
 .container {
     width: 100%;
     height: 100%;
-    padding: 5vw 8.4vh;
+    padding: 5vw 8vh;
     background-color: #eeeeee;
 }
 
@@ -57,295 +57,6 @@ body {
     height: 100px;
 }
 
-/* MODEL ADICIONAR */
-.modal__adicionar {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, .7);
-    transition: all .4s;
-}
-
-.nome__modal{
-    text-align: center;
-}
-
-.modal__adicionar:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.modal__adicionar--content {
-    font-family: 'Montserrat';
-    border-radius: 4px;
-    position: relative;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.modal__adicionar--footer {
-    text-align: right;
-}
-
-#salvarBtn {
-    font-size: 1.3rem;
-    padding: 10px;
-    background-color: #3084B4;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.modal__adicionar--close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #585858;
-    text-decoration: none;
-}
-
-.sigla__carga--horaria{
-    padding-top: 5px;
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-}
-
-.input__file {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.input__nome {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: column;
-}
-
-.input__sigla {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-.input__carga--horaria {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-}
-
-.input__descricao {
-    font-size: 1rem;
-    display: flex;
-    flex-direction: column;
-}
-
-#myInputDescricao{
-    height: 100px;
-    resize: none;
-}
-
-/* MODEL ERROR */
-.modal__error {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, .7);
-    transition: all .4s;
-}
-
-.modal__error:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.modal__error--content {
-    font-family: 'Montserrat';
-    border-radius: 4px;
-    position: relative;
-    width: 300px;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.modal__error--content p {
-    text-align: center;
-}
-
-.modal__error--footer {
-    text-align: right;
-}
-
-.modal__error--close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #585858;
-    text-decoration: none;
-}
-
-/* MODEL EDITAR */
-.modal__editar {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, .7);
-    transition: all .4s;
-}
-
-.modal__editar:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.modal__editar--content {
-    font-family: 'Montserrat';
-    border-radius: 4px;
-    position: relative;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.modal__editar--footer {
-    text-align: right;
-}
-
-.modal__editar--close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #585858;
-    text-decoration: none;
-}
-
-#editar {
-    font-size: 1.3rem;
-    padding: 10px;
-    background-color: #3084B4;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.input__file--valor {
-    font-size: 1rem;
-}
-
-.input__nome--valor {
-    font-size: 1rem;
-}
-
-.input__sigla--valor {
-    font-size: 1rem;
-}
-
-.input__carga--horaria--valor {
-    font-size: 1rem;
-}
-
-.input__descricao--valor {
-    font-size: 1rem;
-}
-
-
-
-/* MODEL DELETAR */
-.modal__deletar {
-    visibility: hidden;
-    opacity: 0;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: rgba(77, 77, 77, .7);
-    transition: all .4s;
-}
-
-.modal__deletar:target {
-    visibility: visible;
-    opacity: 1;
-}
-
-.modal__deletar--content {
-    font-family: 'Montserrat';
-    border-radius: 4px;
-    position: relative;
-    max-width: 90%;
-    background: #fff;
-    padding: 1em 2em;
-    display: flex;
-    flex-direction: column;
-    gap: 30px;
-}
-
-.modal__deletar--footer {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-}
-
-.modal__deletar--footer a {
-    font-size: 1.3rem;
-    padding: 10px 25px;
-    background-color: #3084B4;
-    color: #fff;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.modal__deletar--close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    color: #585858;
-    text-decoration: none;
-}
-
-
 /* CURSOS */
 .cards_cursos {
     display: grid;
@@ -354,6 +65,7 @@ body {
     grid-gap: 46px;
     font-family: 'Montserrat';
     font-weight: 600;
+    padding-top: 3vh;
 }
 
 .card_curso {
@@ -433,31 +145,13 @@ body {
     color: #074A71;
 }
 
+
 @media (max-width: 999px) {
-
-    .modal__adicionar--content {
-        text-align: center;
-        padding: 1em 1em;
-        gap: 15px;
+    .cards_cursos {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
     }
-
-    #myInputSigla{
-        width: 100%;
-    }
-
-    #myInputCargaHoraria{
-        width: 100%;
-    }
-
-    .sigla__carga--horaria{
-        flex-direction: column;
-    }
-
-    .input__sigla {
-        flex-direction: column;
-    }
-    
-    .input__carga--horaria {
-        flex-direction: column;
+    .container{
+        padding: 5vw 4vh;
     }
 }
