--- a/css/adm/administrador_cursos.css
+++ b/css/adm/administrador_cursos.css
@@ -293,7 +293,7 @@ td {
     line-height: 2.5rem;
 }
 
-.nome__modal{
+.nome__modal {
     color: #074A71;
     font-style: normal;
     font-weight: 500;
@@ -340,7 +340,7 @@ td {
     font-size: 3rem;
 }
 
-.sigla__carga--horaria{
+.sigla__carga--horaria {
     padding-top: 5px;
     display: flex;
     justify-content: space-between;
@@ -383,7 +383,7 @@ td {
     flex-direction: column;
 }
 
-#myInputDescricao{
+#myInputDescricao {
     height: 100px;
     resize: none;
 }
@@ -462,6 +462,13 @@ td {
 
 .input__descricao--valor {
     font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+}
+
+#myInputDescricaoValor {
+    height: 100px;
+    resize: none;
 }
 
 
@@ -483,7 +490,7 @@ td {
     line-height: 2.5rem;
 }
 
-.nome__modal--deletar{
+.nome__modal--deletar {
     color: #074A71;
     font-style: normal;
     font-weight: 500;
@@ -590,23 +597,31 @@ td {
         gap: 15px;
     }
 
-    #myInputSigla{
+    #myInputSigla {
         width: 100%;
     }
 
-    #myInputCargaHoraria{
+    #myInputCargaHoraria {
         width: 100%;
     }
 
-    .sigla__carga--horaria{
+    .sigla__carga--horaria {
         flex-direction: column;
     }
 
     .input__sigla {
         flex-direction: column;
     }
-    
+
     .input__carga--horaria {
         flex-direction: column;
+    }
+
+    #myInputSiglaValor {
+        width: 100%;
+    }
+
+    #myInputDescricaoValor {
+        width: 100%;
     }
 }
