--- a/css/professor/tarefas.css
+++ b/css/professor/tarefas.css
@@ -220,7 +220,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.modal_mensagem {
+/* .modal_mensagem2 {
     position: absolute;
     z-index: 1;
     background-color: #ffff;
@@ -233,7 +233,7 @@
     gap: 5vh;
     flex-direction: column;
     height: 40vh;
-}
+} */
 
 .modal_mensagem p {
     text-align: center;
@@ -274,25 +274,20 @@
 
 
 
-
-/* MODEL DELETAR */
 .modal_mensagem {
-    /* visibility: hidden;
-    opacity: 0; */
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     height: 100vh;
+    width: 100vw;
+    margin-left: 0;
     left: 0;
     background: rgba(77, 77, 77, .7);
     transition: all .4s;
 }
 
-.d-flex2 {
-    display: grid;
-    place-content: center;
-}
+
 
 .modal__deletar:target {
     visibility: visible;
@@ -373,6 +368,7 @@
 .buttoesFuncoes{
     display: flex;
     gap: 1vw;
+    align-items: end;
 }
 .buttoesFuncoes button {
     padding: 10px 20px;
@@ -388,14 +384,20 @@
     box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.5);
     opacity: 1;
  }
+ .buttoesFuncoes a{
+    width: auto;
+    height: auto;
+ }
  
  .modal_excluir{
-    display: grid;
-    place-self: center;
     background-color: #585858;
     position: absolute;
     padding: 25px;
     border: 1px solid #ffff;
+ }
+ .d-grid-center{
+    display: grid;
+    place-self: center;
  }
  .modal_excluir span p{
     font-size: clamp(1rem, 0.5rem + 1.6vw, 1.4rem);
@@ -415,6 +417,11 @@
    padding: 10px 20px;
    cursor: pointer;
  }
+
+ .d-flex2 {
+    display: grid;
+    place-content: center;
+}
 
 @media (max-width:650px) {
     .apresentacaoModal h3{
