--- a/css/adm/editar_administrador_professor.css
+++ b/css/adm/editar_administrador_professor.css
@@ -210,13 +210,23 @@ main {
     height: 70%;
 }
 
+/*  */
+
 .listasConteudo__listaTarefas {
+    
     background-color: #E0E0E0;
     width: 25%;
     height: 100%;
     border: 1px solid #074A71;
     border-radius: 10px;
 }
+
+.listasConteudo__listaTarefas--displayFlex {
+    display: flex;
+    flex-direction: column;
+}
+
+/*  */
 
 .listasConteudo__listaTurmas {
     background-color: #E0E0E0;
@@ -226,10 +236,76 @@ main {
     border-radius: 10px;
 }
 
+.listasConteudo__listaTurmas--displayFlex {
+    display: flex;
+    flex-direction: column;
+}
+
+/*  */
+
 .listasConteudo__listaMaterias {
     background-color: #E0E0E0;
     width: 25%;
     height: 100%;
     border: 1px solid #074A71;
     border-radius: 10px;
+}
+
+.listasConteudo__listaMaterias--displayFlex {
+    display: flex;
+    flex-direction: column;
+}
+
+.listaTarefas__titulo {
+    width: 100%;
+    text-align: center;
+}
+
+.listaTurmas__titulo {
+    width: 100%;
+    text-align: center;
+}
+
+.listaMaterias__titulo {
+    width: 100%;
+    text-align: center;
+}
+
+.titulo {
+    color: #286c94;
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding-top: 10px;
+}
+
+/*  */
+
+.listaTarefas__cardTarefas {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.cardTarefas__linkTarefas {
+    background-color: #D6E6F0;
+    width: 80%;
+    height: 20%;
+    text-align: center;
+    border-radius: 10px;
+    filter: drop-shadow(0px 4px 4px #00000040);
+}
+
+.cardTarefas__linkTarefas--displayFlex {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.linkTaferas__imgTarefa {
+    height: 50px;
+
 }
